# ANONYMOUS

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml
crates/: Cargo.toml  clippy.toml  deny.toml
crates/aegis-client/: Cargo.toml
crates/aegis-client/src/: config.rs  driver.rs  emitter.rs  hops_resolve.rs  lib.rs  padding.rs  path.rs  roster_load.rs  send.rs  session.rs  tcp_transport.rs  transport.rs
crates/aegis-client/tests/: bound_path.rs  hardcap_demo.rs  kem_binding.rs  paced_send.rs  session_send.rs  surge_demo.rs
crates/aegis-crypto/: Cargo.toml
crates/aegis-crypto-dudect-ffi/: Cargo.toml
crates/aegis-crypto-dudect-ffi/src/: lib.rs
crates/aegis-crypto/fuzz/: Cargo.toml  README.md
crates/aegis-crypto/fuzz/fuzz_targets/: fuzz_fragment_reassemble.rs  fuzz_kem_decap.rs  fuzz_link_open.rs  fuzz_sphinx_process.rs
crates/aegis-crypto/src/: cell.rs  fragment.rs  kem.rs  lib.rs  link.rs  noise_link.rs  noise_link_legacy.rs  replay.rs  sphinx.rs
crates/aegis-crypto/tests/: dudect_smoke.rs  parser_fuzz_properties.rs  threat_model_gaps.rs  timing_smoke.rs  vectors.rs
crates/aegis-negotiator/: Cargo.toml
crates/aegis-negotiator/src/: ceiling.rs  cover.rs  dial.rs  lib.rs  rendezvous.rs  scheduler.rs
crates/aegis-node/: Cargo.toml
crates/aegis-node/src/: config.rs  exit_sink.rs  kem_seed_protect.rs  lib.rs  main.rs  operator_check.rs
crates/aegis-node/tests/: multiprocess_trace_capture.rs  relay_forward_trace.rs  tcp_testnet.rs  trace_capture.rs
crates/aegis-relay/: Cargo.toml
crates/aegis-relay/src/: config.rs  cover_flow.rs  delay.rs  health_gossip.rs  health_quorum_log.rs  lib.rs  metrics_export.rs  net.rs  node.rs  peer_health.rs  relay_id.rs  trace.rs
crates/aegis-relay/tests/: testnet.rs
crates/aegis-topology/: Cargo.toml
crates/aegis-topology/fuzz/: Cargo.toml
crates/aegis-topology/fuzz/fuzz_targets/: fuzz_beacon_share.rs  fuzz_roster_json.rs
crates/aegis-topology/src/: beacon.rs  ceremony.rs  custody.rs  error.rs  guard_mitigation.rs  guards.rs  layers.rs  lib.rs  path.rs  pruning.rs  roster.rs  shamir.rs  types.rs
crates/aegis-topology/tests/: sybil_admission.rs
crates/aegis-trust/: Cargo.toml
crates/aegis-trust/src/: anomaly.rs  anon_issuer.rs  lib.rs  nullifier.rs  policy.rs  reputation.rs  tee.rs  tee_hardware.rs  zk.rs
deploy/compose/: .env.example  .gitignore  Dockerfile  docker-compose.yml  generate_configs.ps1  generate_configs.sh
deploy/evidence/: .gitignore  host_probe.txt  offline_validate.json
deploy/scripts/: check_pilot_prereqs.ps1  check_pilot_prereqs.sh  validate_compose_offline.py
deploy/templates/: client.production.toml  node.production.toml  roster.toml.snippet
docs/: AEGIS_SPEC_v3_consolidated.md  AEGIS_crypto_constant_time_review.md  AEGIS_dual_plane.md  AEGIS_implementation_threat_model.md  AEGIS_master_plan.md  AEGIS_phase0_and_product.md  AEGIS_phase2_implementation_notes.md  AEGIS_phase8_hardening_notes.md  AEGIS_research_ops_hardening_plan.md  AEGIS_shapeability_resolved.md  AEGIS_v2.1_redesign.md  AEGIS_v2.2_intersection_findings.md  AEGIS_v2.md
docs/ops/: ATTACK_PLAYBOOK.md  CONSORTIUM_CHARTER.md  CRYPTO_THREAT_GAP_LEDGER.md  DEPLOYMENT.md  PC_VERIFY_RESEARCH_WAVE.md  PILOT.md  PRODUCTIZE_DEFENSES_WAVE.md  PRODUCTIZE_LEFTOVERS_WAVE.md  RESEARCH_AGENDA.md  RESEARCH_COVERAGE_WAVE.md  RESEARCH_OPS_STATUS.md  RESEARCH_THEORY_AND_STATUS.md  RESEARCH_UPGRADE_PLAN.md  adaptive_guard_mitigation.md  anonymous_reputation.md  combined_attack_mode1_hardcap.md  consortium_key_ceremony.md  constant_time_ci.md  cover_multihop_defense.md  exit_tier_defense.md  faction_sybil_skew.md  health_gossip.md  metrics_scrape_defense.md  noise_link_auth.md  noise_vs_legacy_kem_binding.md  research_open_items.md  softhsm_ceremony.md  sphinx_symbolic_model.md  tee_attestation.md
scripts/: recapture_dudect_mac_wsl.sh  run_dudect_lab_wsl.ps1  run_dudect_lab_wsl.sh  run_dudect_wsl.ps1  run_dudect_wsl.sh  run_pilot.ps1  run_pilot.sh  run_sphinx_fuzz_evidence.ps1  run_sphinx_fuzz_evidence.sh  seed_sphinx_fuzz_corpus.py  softhsm_ceremony_regress.sh  softhsm_fix_pkcs11_tool.sh  softhsm_init.sh  softhsm_probe.sh  softhsm_user_build.sh  softhsm_verify_and_test.sh  softhsm_wsl.ps1
sim/: README.md  dudect_lab_attempt.txt  dudect_lab_summary.txt  dudect_wsl_smoke.txt  softhsm_ceremony_regress.txt  softhsm_init_evidence.txt  sphinx_fuzz_evidence.txt
sim/aegis_sim/: __init__.py  ac_nullifier_unlinkability.py  adversaries.py  combined_active_intersection.py  cover_multihop.py  cover_multihop_defense.py  cover_timing.py  exit_tier_defense.py  exit_tier_intersection.py  faction_sybil_skew.py  fused_adversary.py  fused_defense.py  gossip_eclipse.py  gossip_eclipse_defense.py  joint_guard_gossip.py  metrics.py  metrics_scrape_defense.py  metrics_sidechannel.py  shaper.py  sphinx_oracle.py  traffic.py
sim/attacks/: active_attack.py  attack_a.py  attack_bc.py  bulk_confirm.py  bulk_corr.py  intersection.py  redesign_test.py  shape2.py  shape3.py  shapeability.py
sim/data/: ac_nullifier_unlinkability.json  adaptive_guard_exposure.analysis.json  adaptive_mitigation_offline.json  adaptive_mitigation_sweep.json  adaptive_v4_saturation.analysis.json  combined_active_intersection.analysis.json  cover_burst_gpa_characterization.json  cover_multihop_characterization.json  cover_multihop_defense.analysis.json  exit_tier_defense.analysis.json  exit_tier_intersection.analysis.json  faction_sybil_skew.json  fused_adversary.analysis.json  fused_defense.analysis.json  gossip_eclipse.analysis.json  gossip_eclipse_defense.analysis.json  gossip_eclipse_offline.json  joint_guard_gossip.analysis.json  metrics_scrape_defense.analysis.json  metrics_sidechannel_characterization.json  real_multiprocess_relay_forward_trace.analysis.json  real_multiprocess_relay_forward_trace.csv  real_multiprocess_trace.analysis.json  real_multiprocess_trace.csv  real_testnet_malicious_trace.analysis.json  real_testnet_malicious_trace.csv  real_testnet_trace.analysis.json  real_testnet_trace.csv  relay_forward_trace_sample.csv  (+1 more)
sim/tests/: test_hardening.py  (+22 more)
(+53 files in other folders)
