# AEGIS Rust workspace. Datapath crates for Phases 2-7 of the build plan.
# See ../../docs/AEGIS_SPEC_v3_consolidated.md (Section 10) for phase gates.
[workspace]
resolver = "2"
members = [
    "aegis-crypto",      # Phase 2: Sphinx packet, hybrid KEM, cell, replay, link
    "aegis-crypto-dudect-ffi", # Optional C ABI for external dudect lab (tools/dudect/)
    "aegis-topology",    # Phase 3: stratified L-tier topology, path selection
    "aegis-relay",       # Phase 3: mix relay (Sphinx process, Exp(mu) delay)
    "aegis-client",      # Phase 4: constant-rate emitter + hard-cap receiver
    "aegis-node",        # Runnable relay binary + TCP link bridge
    "aegis-negotiator",  # Phase 6: bulk plane dial + batched-round scheduler
    "aegis-trust",       # Phase 7: reputation ledger, ZK interface, TEE gate, anomaly detection
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Security / correctness — warn in CI (scoped crates fix hot paths; others documented).
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
panic = "warn"
mem_forget = "warn"
# Pedantic/nursery: advisory only; triaged manually (many style-only hits).
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }

[workspace.dependencies]
# crypto (Phase 2)
chacha20poly1305 = "0.10"   # AEAD link layer
x25519-dalek     = "2"      # classical half of the hybrid KEM
ml-kem           = "0.2"    # ML-KEM-768 (post-quantum half); verify latest at build
sha3             = "0.10"   # SHA3-256 / SHAKE for KDF and MAC
rand_core        = "0.6"
subtle           = "2"      # constant-time comparisons
zeroize          = "1"      # key hygiene
# runtime (Phase 3+)
tokio            = { version = "1", features = ["full"] }
thiserror        = "1"
snow             = { version = "0.9", default-features = false, features = ["default-resolver", "curve25519-dalek", "chacha20poly1305", "blake2"] }
