[package]
name = "aegis-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["noise-link"]
## Noise_IK hop-link mutual auth via `snow` (BLAKE2s; see `noise_link`).
noise-link = ["dep:snow"]
## Pre-`snow` SHA3 transcript module only; not used by default API.
noise-link-legacy-sha3 = []

[lints]
workspace = true

[dependencies]
chacha20poly1305.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets", "getrandom", "zeroize"] }
ml-kem = { workspace = true, features = ["deterministic", "zeroize"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
sha3.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
subtle.workspace = true
zeroize.workspace = true
thiserror.workspace = true
kem-api = { package = "kem", version = "0.3.0-pre.0" }
snow = { workspace = true, optional = true, default-features = false, features = ["default-resolver", "curve25519-dalek", "chacha20poly1305", "blake2"] }

[dev-dependencies]
proptest = "1"
