[package]
name = "aegis-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aegis_node"
path = "src/lib.rs"

[lints]
workspace = true

[[bin]]
name = "aegis-node"
path = "src/main.rs"

[features]
# kem-dpapi: Windows DPAPI. kem-keyring: Unix OS keychain (default-on; effective on unix).
default = ["kem-dpapi", "kem-keyring", "noise-link"]
# Windows: protect external kem.seeds with DPAPI (CryptProtectData, user scope).
# No-op on non-Windows. Disable for lab plaintext seed files on Windows.
kem-dpapi = ["dep:windows-dpapi"]
# Unix: store seed material via `keyring` (service `aegis-node`). Falls back to 0600 file.
# On Windows this feature is a no-op (DPAPI path wins). Disable for lab plaintext on Unix.
kem-keyring = ["dep:keyring"]
# Noise_IK-compatible hop-link mutual auth (see docs/ops/noise_link_auth.md).
noise-link = ["aegis-relay/noise-link", "aegis-crypto/noise-link"]

[dependencies]
aegis-relay = { path = "../aegis-relay" }
aegis-crypto = { path = "../aegis-crypto" }
aegis-negotiator = { path = "../aegis-negotiator" }
aegis-topology = { path = "../aegis-topology" }
aegis-trust = { path = "../aegis-trust" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
sha3.workspace = true
keyring = { version = "3", optional = true }

[target.'cfg(windows)'.dependencies]
windows-dpapi = { version = "0.2", optional = true }

[dev-dependencies]
aegis_node = { path = ".", package = "aegis-node" }
aegis-crypto = { path = "../aegis-crypto" }
aegis-relay = { path = "../aegis-relay" }
aegis-client = { path = "../aegis-client" }
rand_core = { workspace = true, features = ["getrandom"] }
serde_json = "1"
