[package]
name = "aegis-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
tokio.workspace = true
thiserror.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }

[dev-dependencies]
aegis-crypto = { path = "../aegis-crypto" }
rand_core = { workspace = true, features = ["getrandom"] }
