[package]
name = "aegis-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
aegis-negotiator = { path = "../aegis-negotiator" }
aegis-trust = { path = "../aegis-trust" }
tokio.workspace = true
thiserror.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }

[dev-dependencies]
aegis-crypto = { path = "../aegis-crypto" }
rand_core = { workspace = true, features = ["getrandom"] }
