[package]
name = "aegis-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["noise-link"]
noise-link = ["aegis-crypto/noise-link"]

[lints]
workspace = true

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
aegis-negotiator = { path = "../aegis-negotiator" }
aegis-trust = { path = "../aegis-trust" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio.workspace = true
thiserror.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }

[dev-dependencies]
aegis-crypto = { path = "../aegis-crypto" }
rand_core = { workspace = true, features = ["getrandom"] }
