[package]
name = "aegis-topology"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
rand_core.workspace = true
thiserror.workspace = true
sha3.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blsttc = "8.0.2"
aegis-trust = { path = "../aegis-trust" }
aegis-crypto = { path = "../aegis-crypto" }
