[package]
name = "aegis-topology"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
## Unsigned `RelayRoster::admit` / `admit_for_tests` for lab and cross-crate tests only.
## Production builds must leave this off and use signed admission APIs.
test-utils = []

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
rand_core.workspace = true
thiserror.workspace = true
sha3.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blsttc = "8.0.2"
aegis-trust = { path = "../aegis-trust" }
aegis-crypto = { path = "../aegis-crypto" }
