[package]
name = "aegis-topology"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "aegis-ceremony"
path = "src/bin/aegis_ceremony.rs"

[features]
default = []
## Lab-only APIs: unsigned roster admission and unfiltered path/guard selection
## (`RelayRoster::admit_for_tests`, `GuardSelector::new_for_tests`,
## `select_path_for_tests`). Production builds must leave this off and use signed
## admission + `build_bound_path_pruned_with_guards` / reputation-weighted guards.
test-utils = []

[[test]]
name = "sybil_admission"
required-features = ["test-utils"]

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
rand_core.workspace = true
thiserror.workspace = true
sha3.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blsttc = "8.0.2"
clap = { version = "4", features = ["derive"] }
aegis-trust = { path = "../aegis-trust" }
aegis-crypto = { path = "../aegis-crypto" }
