[package]
name = "aegis-trust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
bulletproofs = "5.0.0"
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "rand_core", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
merlin = "3"
rand = "0.8"
rand_core = "0.6"
