[workspace]

[package]
name = "aegis-topology-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blsttc = "8.0.2"
rand = "0.8"

[dependencies.aegis-topology]
path = ".."

[[bin]]
name = "fuzz_roster_json"
path = "fuzz_targets/fuzz_roster_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_beacon_share"
path = "fuzz_targets/fuzz_beacon_share.rs"
test = false
doc = false
bench = false
